src/test/ui/const-generics/issues/issue-100313.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-100313.rs:10:13
   |
LL |             *(B as *const bool as *mut bool) = false;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             writing to alloc7 which is read-only
   |             inside `T::<&true>::set_false` at $DIR/issue-100313.rs:10:13
...
LL |     x.set_false();
   |     ------------- inside `_` at $DIR/issue-100313.rs:18:5

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
